docs(todos): add Mockito + JDK 24 test failure tracking
41 tests fail due to Mockito inability to mock concrete classes
on JDK 24. Documents root cause, affected tests, and solution
options (update Mockito, add --add-opens, refactor to real objects).

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>